<resources>
    <string name="app_name">ShoppoList</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Simple words-->
    <string name="all">All</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="shops">Shops</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="resort">Resort</string>
    <string name="share">Share</string>

    <string name="title_to_by_list">Shopping List</string>
    <string name="title_add_products">Select Products</string>
    <string name="title_activity_new_product">New Product</string>
    <string name="enter_default_product_quantity_for_new_name_product">Enter default quantity of %1$s you usually buy.\nThis value can be corrected while you create your list for shopping.</string>
    <string name="product_name">Product Name</string>
    <string name="product_default_quantity">Product default quantity</string>
    <string name="label_set_quantity_type_of_new_product">Set quantity type of \'%1$s\'.\nIf there is no type you need, you can create one more.</string>
    <string name="label_new_product_in_shop_available">Set shops where the \'%1$s\' might be bought.</string>
    <string name="create_product_progress_step">Step %1$d</string>
    <string name="title_create_product">Create product</string>
    <string name="create_product_subtitle_step_1">Create Name</string>
    <string name="create_product_subtitle_step_2">Set Quantity Type</string>
    <string name="create_product_subtitle_step_3">Set Default Quantity</string>
    <string name="create_product_subtitle_step_4">Select Shops</string>
    <string name="title_manage_shops">Manage Shops List</string>
    <string name="title_manage_product_types">Manage Product Types</string>
    <string name="title_new_item_name">New Item Name</string>
    <string name="title_new_shop_name">New Shop Name</string>
    <string name="title_new_product_type">New Product Type</string>
    <string name="product_exists_message">\'%1$s\' is already exists. Would you like to edit it?</string>
    <string name="product_exists_choose_another_name_message">\'%1$s\' is already exists. Choose another name</string>
    <string name="please_enter_default_quantity">Please enter default quantity</string>
    <string name="quantity_for">Quantity for %1$s:</string>
    <string name="you_should_select_at_least_one_shop">You should select at least one shop</string>
    <string name="error_product_name_cant_be_empty">Product name can\'t be empty</string>
    <string name="error_cant_be_empty">Cannot be empty</string>
    <string name="error_measure_type_cant_be_empty">Measure Type should be selected</string>
    <string name="error_shop_should_be_selected">At least one shop should be selected</string>
    <string name="error_default_quantity_cannot_be_empty">Default Quantity cannot be empty</string>
    <string name="enter_new_name_product">Enter new name</string>
    <string name="backup">Backup</string>
    <string name="backup_create">Create Backup</string>
    <string name="backup_restore">Restore Backup</string>
    <string name="error_backup_create">Can\'t create DB backup</string>
    <string name="error_backup_restore_file">Can\'t restore DB</string>
    <string name="message_restore_db_data_will_be_available_after_restart">Restored data will appear after Application restart</string>

</resources>
