<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_add_or_edit"
        android:icon="@drawable/ic_plus"
        android:title="@string/add"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_resort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/resort"
        app:showAsAction="ifRoom"/>
</menu>